[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/Button.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/xolonium-regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/Interface.gd" type="Script" id=3]
[ext_resource path="res://assets/background.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 2 )

[node name="Interface" type="Node"]
script = ExtResource( 3 )

[node name="MobileBtn" type="Control" parent="."]
visible = false
modulate = Color( 0.588235, 0.588235, 0.588235, 0.364706 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 4.0
margin_bottom = 4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="left" parent="MobileBtn" instance=ExtResource( 1 )]
margin_left = 48.0
margin_top = 576.0
margin_right = 144.0
margin_bottom = 672.0
text = "<"

[node name="right" parent="MobileBtn" instance=ExtResource( 1 )]
margin_left = 816.0
margin_top = 576.0
margin_right = 912.0
margin_bottom = 672.0
text = ">"

[node name="esc" parent="MobileBtn" instance=ExtResource( 1 )]
margin_left = 832.0
margin_top = 276.0
margin_right = 928.0
margin_bottom = 325.0
text = "ESC"

[node name="GameOver" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="GameOver"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )

[node name="GameOver" type="Label" parent="GameOver"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -228.0
custom_fonts/font = SubResource( 1 )
text = "GAME OVER"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" parent="GameOver" instance=ExtResource( 1 )]
margin_left = 384.0
margin_top = 448.0
margin_right = 576.0
margin_bottom = 544.0
text = "Restart"

[node name="Menu" parent="GameOver" instance=ExtResource( 1 )]
margin_left = 384.0
margin_top = 576.0
margin_right = 576.0
margin_bottom = 672.0
text = "Menu"

[node name="PauseMenu" type="Control" parent="."]
visible = false
modulate = Color( 0.784314, 0.784314, 0.784314, 0.568627 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
modulate = Color( 1, 1, 1, 0.219608 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" parent="PauseMenu" instance=ExtResource( 1 )]
margin_left = 368.0
margin_top = 224.0
margin_right = 592.0
margin_bottom = 320.0
text = "Continue"

[node name="ExitToMenu" parent="PauseMenu" instance=ExtResource( 1 )]
margin_left = 328.0
margin_top = 480.0
margin_right = 632.0
margin_bottom = 576.0
text = "Exit to menu"

[node name="Restart" parent="PauseMenu" instance=ExtResource( 1 )]
margin_left = 384.0
margin_top = 352.0
margin_right = 576.0
margin_bottom = 448.0
text = "Restart"

[node name="Score" type="Label" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "Score: 0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="MobileBtn/left" to="." method="_on_left_button_down"]
[connection signal="button_up" from="MobileBtn/left" to="." method="_on_left_button_up"]
[connection signal="button_down" from="MobileBtn/right" to="." method="_on_right_button_down"]
[connection signal="button_up" from="MobileBtn/right" to="." method="_on_right_button_up"]
[connection signal="pressed" from="MobileBtn/esc" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="GameOver/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="GameOver/Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="PauseMenu/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="PauseMenu/ExitToMenu" to="." method="_on_ExitToMenu_pressed"]
[connection signal="pressed" from="PauseMenu/Restart" to="." method="_on_PM_Restart_pressed"]
